[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/Asdonaur/Asdito.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Minigames/Asdonaur/Flour.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Minigames/Asdonaur/Karbon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Minigames/Asdonaur/Rake.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "flour"
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flourgen"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Nueva Animación"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Asdito" type="KinematicBody2D"]
position = Vector2( 610, 215 )
collision_mask = 0
script = ExtResource( 2 )
Flour = ExtResource( 3 )
Karbon = ExtResource( 4 )
Rake = ExtResource( 5 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 1.125, 1.125 )

[node name="Head" type="Sprite" parent="Body"]
position = Vector2( -1.77777, -7.55562 )
scale = Vector2( 1.5, 1.5 )

[node name="Head2" type="Sprite" parent="Body/Head"]
position = Vector2( 0, 1.18519 )
scale = Vector2( 1, 0.75 )
texture = ExtResource( 1 )

[node name="Head3" type="Sprite" parent="Body/Head"]
scale = Vector2( 0.75, 1 )
texture = ExtResource( 1 )

[node name="Head4" type="Sprite" parent="Body/Head"]
position = Vector2( 0, -6.39484 )
scale = Vector2( 1.25, 0.6 )
texture = ExtResource( 1 )

[node name="Head6" type="Sprite" parent="Body/Head"]
position = Vector2( 0, -8.39488 )
scale = Vector2( 1.15, 0.7 )
texture = ExtResource( 1 )

[node name="Head5" type="Sprite" parent="Body/Head"]
position = Vector2( 0, 7 )
scale = Vector2( 0.5, 0.75 )
texture = ExtResource( 1 )

[node name="Body" type="Sprite" parent="Body"]
position = Vector2( -2.66669, 0 )

[node name="Body2" type="Sprite" parent="Body/Body"]
position = Vector2( 0, 41 )
scale = Vector2( 1.25, 2 )
texture = ExtResource( 1 )

[node name="Body3" type="Sprite" parent="Body/Body"]
position = Vector2( 0, 41 )
scale = Vector2( 1.5, 1.75 )
texture = ExtResource( 1 )

[node name="Arms" type="Sprite" parent="Body"]
position = Vector2( -2.66669, 0 )

[node name="Left" type="Sprite" parent="Body/Arms"]
position = Vector2( -23.1229, 37.9998 )
rotation = 1.5708
scale = Vector2( 0.987, -0.25 )
texture = ExtResource( 1 )

[node name="Left2" type="Sprite" parent="Body/Arms/Left"]
position = Vector2( -12.8395, 12.5 )
scale = Vector2( 0.25, 2 )
texture = ExtResource( 1 )

[node name="Left3" type="Sprite" parent="Body/Arms/Left"]
position = Vector2( 14.1779, 2.49963 )
scale = Vector2( 0.25, 1.25 )
texture = ExtResource( 1 )

[node name="Right" type="Sprite" parent="Body/Arms"]
position = Vector2( 22.9998, 38.6664 )
rotation = 4.71239
scale = Vector2( 1, -0.25 )
texture = ExtResource( 1 )

[node name="Left2" type="Sprite" parent="Body/Arms/Right"]
position = Vector2( 13.1605, 12.5 )
scale = Vector2( 0.25, 2 )
texture = ExtResource( 1 )

[node name="Left3" type="Sprite" parent="Body/Arms/Right"]
position = Vector2( -13.4889, 2.85461 )
scale = Vector2( 0.25, 1.25 )
texture = ExtResource( 1 )

[node name="Legs" type="Sprite" parent="Body"]
position = Vector2( -1.77777, 5.33331 )
scale = Vector2( 1.25, 1 )

[node name="Left" type="Sprite" parent="Body/Legs"]
position = Vector2( -9.77777, 66 )
scale = Vector2( 0.4, 1 )
texture = ExtResource( 1 )

[node name="Left2" type="Sprite" parent="Body/Legs/Left"]
position = Vector2( 0, 4 )
scale = Vector2( 0.75, 1 )
texture = ExtResource( 1 )

[node name="Right3" type="Sprite" parent="Body/Legs/Left"]
position = Vector2( -2.5, 19 )
scale = Vector2( 1.25, 0.313 )
texture = ExtResource( 1 )

[node name="Right4" type="Sprite" parent="Body/Legs/Left"]
position = Vector2( -5, 19 )
scale = Vector2( 1.25, 0.25 )
texture = ExtResource( 1 )

[node name="Right" type="Sprite" parent="Body/Legs"]
position = Vector2( 6.22223, 66 )
scale = Vector2( 0.4, 1 )
texture = ExtResource( 1 )

[node name="Right2" type="Sprite" parent="Body/Legs/Right"]
position = Vector2( 0, 4 )
scale = Vector2( 0.75, 1 )
texture = ExtResource( 1 )

[node name="Right3" type="Sprite" parent="Body/Legs/Right"]
position = Vector2( -2.5, 19 )
scale = Vector2( 1.25, 0.313 )
texture = ExtResource( 1 )

[node name="Right4" type="Sprite" parent="Body/Legs/Right"]
position = Vector2( -5, 19 )
scale = Vector2( 1.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 18.6993, 8.94839, 19.2915, -6.44318, 24.6008, -6.67914, 24.3649, -31.5738, 22.1232, -31.6918, 22.2411, -37.1191, -26.1324, -37.0011, -26.3684, -32.2817, -28.5097, -31.5983, -28.1382, -6.79712, -22.861, -6.92229, -22.8312, 9.5383, -12.4486, 12.4879, -12.6041, 17.7538, -23.5389, 25.2302, -32.0338, 25.3482, -32.4809, 61.8685, -22.9528, 61.7898, -22.6705, 93.9393, -23.1332, 97.5986, -25.8973, 97.4348, -26.0959, 105.116, 14.1636, 105.248, 14.0994, 97.74, 13.965, 93.4618, 13.6636, 71.3966, 18.2308, 62.1047, 26.4991, 61.7898, 26.6044, 25.3482, 17.7553, 25.2303, 8.43463, 17.7972, 8.55261, 12.6059 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitArea"]
position = Vector2( -1.41425, 0 )
polygon = PoolVector2Array( 18.6993, 8.94839, 19.2915, -6.44318, 24.6008, -6.67914, 24.3649, -31.5738, 22.1232, -31.6918, 22.2411, -37.1191, -26.1324, -37.0011, -26.3684, -32.2817, -28.5097, -31.5983, -28.1382, -6.79712, -22.861, -6.92229, -22.8312, 9.5383, -12.4486, 12.4879, -12.6041, 17.7538, -23.5389, 25.2302, -32.0338, 25.3482, -32.4809, 61.8685, -22.9528, 61.7898, -22.6705, 93.9393, -23.1332, 97.5986, -25.8973, 97.4348, -26.0959, 105.116, 14.1636, 105.248, 14.0994, 97.74, 13.965, 93.4618, 13.6636, 71.3966, 18.2308, 62.1047, 26.4991, 61.7898, 26.6044, 25.3482, 17.7553, 25.2303, 8.43463, 17.7972, 8.55261, 12.6059 )

[node name="Attacks" type="AnimationPlayer" parent="."]
anims/flour = SubResource( 1 )

[node name="ChangeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Karbonpos" type="Position2D" parent="."]
position = Vector2( -8.98987, 49.4442 )

[node name="It" type="Timer" parent="."]
one_shot = true

[node name="Inmunity" type="AnimationPlayer" parent="."]
"anims/Nueva Animación" = SubResource( 2 )

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="timeout" from="ChangeTimer" to="." method="_on_ChangeTimer_timeout"]
[connection signal="timeout" from="It" to="." method="_on_It_timeout"]
